--- a/index.html
+++ b/index.html
@@ -11,15 +11,14 @@
             <h1>Batman Trivia!</h1>
             <hr style="margin-bottom: 20px">
 
-            <p id="question"></p>
-
-            <div class="buttons">
-                <button id="btn0"><span id="choice0"></span></button>
-                <button id="btn1"><span id="choice1"></span></button>
-                <button id="btn2"><span id="choice2"></span></button>
-                <button id="btn3"><span id="choice3"></span></button>
-            </div>
-
+            <h2 id= "questi">
+            <input type = "radio" id = "quest" name = "question" value = "choiceA"><br>
+            <input type = "radio" id = "quest" name = "question" value = "choiceB"><br>
+            <input type = "radio" id = "quest" name = "question" value = "choiceC"><br>
+            <input type = "radio" id = "quest" name = "question" value = "choiceD"><br>
+       
+            <input id= "button" type = "button" value = "Done">
+            
             <hr style="margin-top: 50px">
             <footer>
                 <p id="progress">Question x of y</p>
